--- a/AreaPerimeterOfCircle/nbproject/private/private.properties
+++ b/AreaPerimeterOfCircle/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Dylan\\AppData\\Roaming\\NetBeans\\12.0\\config\\GlassFishEE6\\Properties\\gfv31874318664.properties
+deploy.ant.properties.file=C:\\Users\\SK\\AppData\\Roaming\\NetBeans\\12.0\\config\\GlassFishEE6\\Properties\\gfv3-774038500.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Dylan/Downloads/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/Dylan/Downloads/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\Dylan\\Downloads\\GlassFish_Server\\glassfish;C:\\Users\\Dylan\\Downloads\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv5ee8:localhost:4848
-j2ee.server.middleware=C:/Users/Dylan/Downloads/GlassFish_Server
-user.properties.file=C:\\Users\\Dylan\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+j2ee.server.domain=D:/HW/Year3/1/Base Component/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=D:/HW/Year3/1/Base Component/GlassFish_Server/glassfish
+j2ee.server.instance=[D:\\HW\\Year3\\1\\Base Component\\GlassFish_Server\\glassfish;D:\\HW\\Year3\\1\\Base Component\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv5ee8:localhost:4848
+j2ee.server.middleware=D:/HW/Year3/1/Base Component/GlassFish_Server
+user.properties.file=C:\\Users\\SK\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
